; ModuleID = '/home/carl/AnghaBench/systemd/src/libsystemd-network/extr_sd-dhcp-client.c_sd_dhcp_client_get_lease.c'
source_filename = "/home/carl/AnghaBench/systemd/src/libsystemd-network/extr_sd-dhcp-client.c_sd_dhcp_client_get_lease.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32*, i32 }

@EINVAL = common dso_local global i32 0, align 4
@DHCP_STATE_SELECTING = common dso_local global i32 0, align 4
@DHCP_STATE_BOUND = common dso_local global i32 0, align 4
@DHCP_STATE_RENEWING = common dso_local global i32 0, align 4
@DHCP_STATE_REBINDING = common dso_local global i32 0, align 4
@EADDRNOTAVAIL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sd_dhcp_client_get_lease(%struct.TYPE_4__* %0, i32** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_4__*, align 8
  %5 = alloca i32**, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %4, align 8
  store i32** %1, i32*** %5, align 8
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %7 = load i32, i32* @EINVAL, align 4
  %8 = sub nsw i32 0, %7
  %9 = call i32 @assert_return(%struct.TYPE_4__* %6, i32 %8)
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 8
  %13 = load i32, i32* @DHCP_STATE_SELECTING, align 4
  %14 = load i32, i32* @DHCP_STATE_BOUND, align 4
  %15 = load i32, i32* @DHCP_STATE_RENEWING, align 4
  %16 = load i32, i32* @DHCP_STATE_REBINDING, align 4
  %17 = call i32 @IN_SET(i32 %12, i32 %13, i32 %14, i32 %15, i32 %16)
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %22, label %19

19:                                               ; preds = %2
  %20 = load i32, i32* @EADDRNOTAVAIL, align 4
  %21 = sub nsw i32 0, %20
  store i32 %21, i32* %3, align 4
  br label %31

22:                                               ; preds = %2
  %23 = load i32**, i32*** %5, align 8
  %24 = icmp ne i32** %23, null
  br i1 %24, label %25, label %30

25:                                               ; preds = %22
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %27 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %26, i32 0, i32 0
  %28 = load i32*, i32** %27, align 8
  %29 = load i32**, i32*** %5, align 8
  store i32* %28, i32** %29, align 8
  br label %30

30:                                               ; preds = %25, %22
  store i32 0, i32* %3, align 4
  br label %31

31:                                               ; preds = %30, %19
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}

declare dso_local i32 @assert_return(%struct.TYPE_4__*, i32) #1

declare dso_local i32 @IN_SET(i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
